<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--二选一-->
    <RadioGroup
        android:id="@+id/radiogroup_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--创建文件选项-->
        <RadioButton
            android:id="@+id/create_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_file" />

        <!--创建文件夹选项-->
        <RadioButton
            android:id="@+id/create_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_folder" />

    </RadioGroup>

    <!--文本框，供用户填写文件名称-->
    <EditText
        android:id="@+id/new_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_hint"
        android:singleLine="true" />

</LinearLayout>